Create a basic layout for the entire website

--- a/index.html
+++ b/index.html
@@ -5,4 +5,28 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="css/style.css">
     </head>
+    <body>
+        <div class="header">Header Logo
+            <ul>
+                <li class="headlink">header link one</li>
+                <li class="headlink">header link two</li>
+                <li class="headlink">header link three</li>
+            </ul>
+        </div>
+        <div class="awesome">
+          <div class="maintext"></div>
+          <div class="secondarytext"></div>
+          <div class="awesomeimage"></div>
+        </div>
+        <div class="info"></div>
+          <div class="infoimage"></div>
+          <div class="infoimage"></div>
+          <div class="infoimage"></div>
+          <div class="infoimage"></div>
+        <div class="quotes"></div>
+          <div class="quotecontent"></div>
+        <div class="signup"></div>
+          <div class="action"></div>
+        <div class="footer"></div>
+    </body>
 </html>
