finished header and began hero modifications css and html

--- a/index.html
+++ b/index.html
@@ -7,16 +7,19 @@
     </head>
     <body>
         <div class="header">Header Logo
-            <ul>
-                <li class="headlink">header link one</li>
-                <li class="headlink">header link two</li>
-                <li class="headlink">header link three</li>
-            </ul>
+          <ul>
+            <li class="headlink"><a href="https://google.com">header link one</a></li>
+            <li class="headlink"><a href="https://google.com">header link two</a></li>
+            <li class="headlink"><a href="https://google.com">header link three</a></li>
+          </ul>
         </div>
-        <div class="awesome">
-          <div class="maintext"></div>
-          <div class="secondarytext"></div>
-          <div class="awesomeimage"></div>
+        <div class="herocont">  
+          <div class="hero">
+            <div class="maintext">This website is awesome</div>
+            <div class="secondarytext">yapyapyap adasiojdhsa sadkjsahdksahdashdjkahs dashdasdnnmd nianjk nwadnjkwan jk 
+              <button>Sign up</button></div>
+          </div>
+          <div><img src="imagelink" alt="image desctiptions"></div> 
         </div>
         <div class="info"></div>
           <div class="infoimage"></div>
