Create a class name for image div

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="secondarytext">yapyapyap adasiojdhsa sadkjsahdksahdashdjkahs dashdasdnnmd nianjk nwadnjkwan jk 
               <button>Sign up</button></div>
           </div>
-          <div><img src="imagelink" alt="image desctiptions"></div> 
+          <div class="imagecont"><img src="imagelink" alt="image desctiptions"></div> 
         </div>
         <div class="info"></div>
           <div class="infoimage"></div>
