Finished Hero added image

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
         <div class="herocont">  
           <div class="hero">
             <div class="maintext">This website is awesome</div>
-            <div class="secondarytext">yapyapyap adasiojdhsa sadkjsahdksahdashdjkahs dashdasdnnmd nianjk nwadnjkwan jk 
+            <div class="secondarytext">yapyapyap adasiojdhsa sadkjsahdksahdashdjkahs dashdasdnnmd nianjk nwadnjkwan jk nfdawuhjibdnwahwuyhan edhwuialh uiwahwiu dwhaui hduiwa hiuwahd ui
               <button>Sign up</button></div>
           </div>
-          <div class="imagecont"><img src="imagelink" alt="image desctiptions"></div> 
+          <div class="imagecont">
+            <img src="images/rhino-50ds-revolver2.jpg" alt="Rhino 50DS Revolver Chambeted in .357">
+          </div> 
         </div>
         <div class="info"></div>
           <div class="infoimage"></div>
