Finish info section in html with hero updates

--- a/index.html
+++ b/index.html
@@ -24,10 +24,19 @@
           </div> 
         </div>
         <div class="info"></div>
-          <div class="infoimage"></div>
-          <div class="infoimage"></div>
-          <div class="infoimage"></div>
-          <div class="infoimage"></div>
+          <div class="infotitle">This Revolver be bussin</div>
+          <div class="infobear"></div>
+            <img src="images/bear.png" alt="The Logo for Bear PMCs.">
+            <div class="beartxt"></div>
+          <div class="infousec"></div>
+            <img src="images/usec.png" alt="The Logo for USEC PMCs.">
+            <div class="usectext"></div>
+          <div class="info357"></div> 
+            <img src="images/357mag.jpeg" alt="A .357 Magnum round standing tall and one laid down next to it.">
+            <div class="357txt"></div>
+          <div class="infopmc"></div>
+            <img src="images/smile.jpeg" alt="A PMC happy with their purchase">
+            <div class="pmctext"></div>
         <div class="quotes"></div>
           <div class="quotecontent"></div>
         <div class="signup"></div>
