--- a/index.html
+++ b/index.html
@@ -25,18 +25,22 @@
         </div>
         <div class="info"></div>
           <div class="infotitle">This Revolver be bussin</div>
-          <div class="infobear"></div>
+          <div class="infobear">
             <img src="images/bear.png" alt="The Logo for Bear PMCs.">
-            <div class="beartxt"></div>
-          <div class="infousec"></div>
+            <div class="beartxt">The most popular revolver among the Bear PMCs; extensively tested in the field!</div>
+          </div>
+          <div class="infousec">
             <img src="images/usec.png" alt="The Logo for USEC PMCs.">
-            <div class="usectext"></div>
-          <div class="info357"></div> 
+            <div class="usectext"> Despite being made in Italy its a popular side arms with USECs!</div>
+          </div>
+          <div class="info357">
             <img src="images/357mag.jpeg" alt="A .357 Magnum round standing tall and one laid down next to it.">
-            <div class="357txt"></div>
-          <div class="infopmc"></div>
-            <img src="images/smile.jpeg" alt="A PMC happy with their purchase">
-            <div class="pmctext"></div>
+            <div class="357txt">Being chambered in .357 Magnum you can be certain this revolver has enough power.</div>
+          </div>
+          <div class="infopmc">
+            <img src="images/smile.jpeg" alt="A PMC happy with their purchase.">
+            <div class="pmctext">Just look at the satisfaction from one of our customers contracting in Tarkov.</div>
+          </div>
         <div class="quotes"></div>
           <div class="quotecontent"></div>
         <div class="signup"></div>
