Correct containers in info section

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="images/rhino-50ds-revolver2.jpg" alt="Rhino 50DS Revolver Chambeted in .357">
           </div> 
         </div>
-        <div class="info"></div>
+        <div class="info">
           <div class="infotitle">This Revolver be bussin</div>
           <div class="infobear">
             <img src="images/bear.png" alt="The Logo for Bear PMCs.">
@@ -41,6 +41,7 @@
             <img src="images/smile.jpeg" alt="A PMC happy with their purchase.">
             <div class="pmctext">Just look at the satisfaction from one of our customers contracting in Tarkov.</div>
           </div>
+        </div>          
         <div class="quotes"></div>
           <div class="quotecontent"></div>
         <div class="signup"></div>
