Input content in quote section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
           </div>
         </div>          
         <div class="quotes"></div>
-          <div class="quotecontent"></div>
+          <div class="quotecontent">I love to reload during a battle!  There's nothing like the feeling of slamming a long silver bullet into a well-greased chamber.</div>
+          <div class="quotespeaker">-Adamaska, Revolver Enthusiast</div> 
         <div class="signup"></div>
           <div class="action"></div>
         <div class="footer"></div>
