Corrected div in quotes sec and finished quotes css

--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
             </div>
           </div>
         </div>          
-        <div class="quotes"></div>
-          <div class="quotecontent">I love to reload during a battle!  There's nothing like the feeling of slamming a long silver bullet into a well-greased chamber.</div>
+        <div class="quotes">
+          <div class="quotecontent"><em>I love to reload during a battle!  There's nothing like the feeling of slamming a long silver bullet into a well-greased chamber.</em></div>
           <div class="quotespeaker">-Adamaska, Revolver Enthusiast</div> 
-        <div class="signup"></div>
+        </div>
+        <div class="signup">
           <div class="action"></div>
+        </div> 
         <div class="footer"></div>
     </body>
 </html>
