--- a/index.html
+++ b/index.html
@@ -50,9 +50,17 @@
           <div class="quotespeaker">-Adamaska, Revolver Enthusiast</div> 
         </div>
         <div class="signup">
-          <div class="action">Call to action! its time!</div> 
-          <div class="Signupbtn">Sign up for our product by clicking that button right over there! <button class="actionbtn">Sign up</button></div>
-        </div> 
-        <div class="footer"></div>
+          <div class="actioncont">
+            <div class="action">Call to action! its time!
+              <div class="signupcont">
+                <div class="signuptext">Sign up for our product by clicking that button right over there!</div>
+              </div>
+            </div>  
+            <button>Sign up</button>       
+          </div>
+        </div>
+        <div class="footer">
+          <div class="footertext">Copyright &copy; The Odin Project 2022</div>
+          </div>
     </body>
 </html>
